# agent-bridge

./: .env.example  .gitignore  README.md  experiment_langgraph_one_agent.ipynb  pyproject.toml
docs/: notebook_to_python_module_migration_plan.md
notebooks/: experiment_langgraph_one_agent.ipynb
src/agentbridge/: __init__.py  cli.py  config.py  llm.py  prompts.py  schemas.py
src/agentbridge/graph/: __init__.py  builder.py  helpers.py  nodes.py  runtime.py
src/agentbridge/tools/: __init__.py  search.py
src/agentbridge/ui/: gradio_app.py
tests/: test_config.py  test_graph_builder.py  test_graph_helpers.py  test_search.py
