[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.17.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "mcp-server-fetch>=2025.1.17",
    "python-dotenv>=1.0.1",
]

[project.scripts]
agentbridge = "agentbridge.cli:main"
agentbridge-gradio = "agentbridge.ui.gradio_app:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
